--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ form {
 }
 
 .marker-icon {
-    min-width: 70px;
+    min-width: 55px;
     background-color: #f2f2f2;
     font-size: 18px;
     border-radius: 16px 0 0 16px;
@@ -289,6 +289,11 @@ form {
     display: flex;
     flex-direction: column;
     gap: 30px;
+}
+
+.popular .title {
+    display: flex;
+    justify-content: space-between;
 }
 
 .popular .cards {
