--- a/style.css
+++ b/style.css
@@ -28,13 +28,6 @@ body {
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1024px) {
-    .navbar {
-        margin: 0 0 0 -35px;
-        width: 104%;
-    }
-}
-
 @media screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
@@ -47,6 +40,12 @@ body {
     width: 120px;
     cursor: pointer;
     padding: 35px 0 0 70px;
+}
+
+@media screen and (max-width: 1024px) {
+    .logo {
+        padding: 35px 0 0 25px;
+    }
 }
 
 .navbar ul {
@@ -137,7 +136,7 @@ section#intro {
 
 @media screen and (max-width: 1024px) {
     section#intro {
-        margin: 0 0 0 35px;
+        margin: 0 0 0 25px;
     }
 }
 
@@ -147,13 +146,27 @@ section#intro {
     }
 }
 
+
 #intro h1 {
     font-size: 2rem;
     margin-bottom: 0.5rem;
 }
 
+@media screen and (max-width: 400px) {
+    #intro h1 {
+        font-size: 2rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
 #intro p {
     font-size: 1.4rem;
+}
+
+@media screen and (max-width: 400px) {
+    #intro p {
+        font-size: 1.4rem;
+    }
 }
 
 form {
@@ -163,7 +176,7 @@ form {
 
 @media screen and (max-width: 1024px) {
     form {
-        margin: 32px 0 0 35px;
+        margin: 32px 0 0 25px;
     }
 }
 
@@ -202,6 +215,12 @@ form {
     font-family: "Raleway", sans-serif;
 }
 
+@media screen and (max-width: 768px) {
+    .search-bar input {
+        width: 150px;
+    }
+}
+
 .btn-search {
     background-color: #0065fc;
     color: #fff;
@@ -210,6 +229,29 @@ form {
     padding: 0 18px;
     font-size: 18px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .btn-search {
+        display: none;
+    }
+}
+
+.btn-search2 {
+    background-color: #0065fc;
+    color: #fff;
+    border: none;
+    border-radius: 0 16px 16px 0;
+    padding: 0 18px;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .btn-search2 {
+        display: block;
+    }
 }
 
 .filtres {
@@ -224,7 +266,7 @@ form {
     .filtres {
         flex-direction: column;
         align-items: baseline;
-        margin: 50px 0 0 35px;
+        margin: 50px 0 0 25px;
     }
 }
 
@@ -249,6 +291,12 @@ form {
     gap: 25px;
 }
 
+@media screen and (max-width: 400px) {
+    .filtres ul {
+        gap: 16px;
+    }
+}
+
 .filtres ul li {
     display: flex;
     flex-direction: row;
@@ -270,6 +318,13 @@ form {
     color: black;
 }
 
+@media screen and (max-width: 400px) {
+    .filtres ul li span {
+        font-size: 16px;
+    }
+}
+
+
 .info {
     display: flex;
     flex-direction: row;
@@ -280,7 +335,7 @@ form {
 
 @media screen and (max-width: 1024px) {
     .info {
-        margin: 40px 0 0 35px;
+        margin: 40px 0 0 25px;
     }
 }
 
@@ -308,9 +363,14 @@ form {
     color: #0065fc;
 }
 
+@media screen and (max-width: 400px) {
+    .info p {
+        font-size: 13px;
+    }
+}
+
 .hosting-menu {
     width: 92%;
-    height: 73vh;
     margin: 40px 0 0 70px;
     display: flex;
     flex-direction: row;
@@ -320,7 +380,7 @@ form {
 @media screen and (max-width: 1024px) {
     .hosting-menu {
         flex-direction: column;
-        margin: 40px 0 0 35px;
+        margin: 40px 0 0 25px;
     }
 }
 
@@ -349,7 +409,7 @@ form {
 @media screen and (max-width: 768px){
     .hosting {
         border-radius: 0;
-        width: 100%;
+        width: calc(100% - 30px);
         background: #ffffff;
         order: 2;
     }
@@ -463,7 +523,7 @@ form {
 @media screen and (max-width: 768px) {
     .popular {
         border-radius: 0px;
-        width: 100%;
+        width: calc(100% - 30px);
         order: 1;
     }
 }
@@ -551,31 +611,29 @@ form {
 
 .activity-menu {
     width: 88%;
-    height: 65vh;
-    padding: 30px;
+    padding: 30px 30px 50px 30px;
     margin: 40px 0 0 70px;
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
     .activity-menu {
-        margin: 400px 0 0 35px;
-    }
+        margin: 40px 0 0 25px;
+     }
 }
 
-
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
     .activity-menu {
-        margin: 2500px 0 0 20px;
-    }
+        margin: 40px 0 50px 30px;
+        padding: 0
+     }
 }
 
 .activity-menu .cards {
     display: flex;
     justify-content: space-between;
-    height: 450px;
 }
 
 @media screen and (max-width: 768px) {
@@ -614,9 +672,15 @@ form {
 
 .activity-menu .cards .card img {
     width: 100%;
-    height: 85%;
+    height: 500px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .activity-menu .cards .card img {
+        height: 300px;
+    }
 }
 
 .activity-menu .cards .card .container {
@@ -648,6 +712,7 @@ footer .container {
 @media screen and (max-width: 1024px) {
     footer .container {
         width: 85%;
+        gap: 180px;
     }
 }
 
@@ -655,6 +720,7 @@ footer .container {
     footer .container {
         flex-direction: column;
         gap: 65px;
+        width: calc(100% - 100px)
     }
 }
 
